test/Fail/Issue4482.err
Issue4482.agda:5.24-25: error: [WrongHidingInLHS]
Unexpected implicit argument
when checking the clause left hand side
.extendedlambda0 _ {B = B} {A = A}
